--- a/PassionProjectSummer2024/Views/Department/Details.cshtml
+++ b/PassionProjectSummer2024/Views/Department/Details.cshtml
@@ -26,6 +26,7 @@
 <a href="/Department/DeleteConfirm/@Model.SelectedDepartment.DepartmentId" class="button">Delete Department</a>
 <a href="/Department/Edit/@Model.SelectedDepartment.DepartmentId" class="button" style="margin-left:10px;margin-bottom:5px">Update Department</a><br />
 <div>
+    <p><strong>Department Id : </strong>@Model.SelectedDepartment.DepartmentId </p>
     <p><strong>Department Name : </strong>@Model.SelectedDepartment.DepartmentName </p>
     <p><strong>Department Manager : </strong>@Model.SelectedDepartment.DepartmentManager </p>
     <p><strong>No of Employees : </strong>@Model.SelectedDepartment.NoOfEmployees </p>
