--- a/PassionProjectSummer2024/Views/Department/New.cshtml
+++ b/PassionProjectSummer2024/Views/Department/New.cshtml
@@ -14,7 +14,7 @@
     <div>
         <label>Department Manager : </label> <input type="text" name="DepartmentManager" />
     </div>
-    <div>
+    <div style="display:none">
         <label>Department Id</label> <input type="number" name="DepartmentId" />
     </div>
     <div>
