--- a/PassionProjectSummer2024/Views/Employee/Edit.cshtml
+++ b/PassionProjectSummer2024/Views/Employee/Edit.cshtml
@@ -3,31 +3,31 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit Employee</h2>
+<h2 class="text-center display-4">Edit Employee</h2>
 <br />
 <form action="/Employee/Update/@Model.SelectedEmployee.EmployeeId" method="POST">
     <div style="display:none;">
-        <label>Employee Id: </label> <input type="number" name="EmployeeId" value="@Model.SelectedEmployee.EmployeeId" />
+        <label>Employee Id: </label> <input type="number" class="form-control" name="EmployeeId" value="@Model.SelectedEmployee.EmployeeId" />
     </div>
-    <div>
-        <label>First Name: </label> <input type="text" name="FirstName" value="@Model.SelectedEmployee.FirstName" />
+    <div class="mb-3">
+        <label class="form-label">First Name: </label> <input type="text" class="form-control" name="FirstName" value="@Model.SelectedEmployee.FirstName" />
     </div>
-    <div>
-        <label>Last Name: </label> <input type="text" name="LastName" value="@Model.SelectedEmployee.LastName" />
+    <div class="mb-3">
+        <label class="form-label">Last Name: </label> <input type="text" class="form-control" name="LastName" value="@Model.SelectedEmployee.LastName" />
     </div>
-    <div>
-        <label>Hire Date</label> <input type="date" name="HireDate" value="@Model.SelectedEmployee.HireDate.ToString("yyyy-MM-dd")" />
-    </div>
-    <div style="display:none;">
-        <label>Previous Department Id</label> <input type="number" name="PreviousDepartmentId" value="@Model.SelectedEmployee.PreviousDepartmentId" />
+    <div class="mb-3">
+        <label class="form-label">Hire Date</label> <input type="date" class="form-control" name="HireDate" value="@Model.SelectedEmployee.HireDate.ToString("yyyy-MM-dd")" />
     </div>
     <div style="display:none;">
-        <label>Previous Position Id</label> <input type="number" name="PreviousPositionId" value="@Model.SelectedEmployee.PreviousPositionId" />
+        <label class="form-label">Previous Department Id</label> <input type="number" class="form-control" name="PreviousDepartmentId" value="@Model.SelectedEmployee.PreviousDepartmentId" />
+    </div>
+    <div style="display:none;">
+        <label class="form-label">Previous Position Id</label> <input type="number" class="form-control" name="PreviousPositionId" value="@Model.SelectedEmployee.PreviousPositionId" />
     </div>
 
-    <div>
-        <label>Department</label>
-        <select name="DepartmentId">
+    <div class="mb-3">
+        <label class="form-label">Department</label>
+        <select class="form-select" name="DepartmentId">
             @foreach (var department in Model.DepartmentOptions)
             {
                 string selected = "";
@@ -43,9 +43,9 @@
 
     </div>
 
-    <div>
-        <label>Position</label>
-        <select name="PositionId">
+    <div class="mb-3">
+        <label class="form-label">Position</label>
+        <select class="form-select" name="PositionId">
             @foreach (var position in Model.PositionOptions)
             {
                 string selected = "";
@@ -64,10 +64,10 @@
     <!-- <div>
          <label>Position</label> <input type="number" name="PositionId" value="@Model.SelectedEmployee.PositionId" />
      </div>-->
-    <div>
-        <input type="submit" value="Update Employee" style="background-color:orangered; color:white" />
+    <div class="mb-3">
+        <input type="submit"  class="btn btn-danger" value="Update Employee"   />
 
     </div>
-    <p>Previous DepartmentId: @Model.SelectedEmployee.PreviousDepartmentId</p>
+    <p class="p-2 text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">Previous DepartmentId: @Model.SelectedEmployee.PreviousDepartmentId</p>
 </form>
 
