--- a/PassionProjectSummer2024/Views/Employee/New.cshtml
+++ b/PassionProjectSummer2024/Views/Employee/New.cshtml
@@ -3,51 +3,59 @@
     ViewBag.Title = "New";
 }
 
-<h2>Add New Employee</h2>
-<a href="/Employee/List">Go back to List</a>
-<br />
-<br />
-<form action="/Employee/Create" method="POST">
-    <div>
-        <label>First Name: </label> <input type="text" name="FirstName" />
+<h2 class="text-center display-4">Add New Employee</h2>
+<a class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 mb-4" href="/Employee/List">Go back to List</a>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+
+                <form action="/Employee/Create" method="POST">
+                    <div class="mb-3">
+                        <label class="form-label">First Name: </label> <input class="form-control" type="text" name="FirstName" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Last Name: </label> <input class="form-control" type="text" name="LastName" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Hire Date</label> <input class="form-control" type="date" name="HireDate" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Department</label>
+                        <select class="form-select" name="DepartmentId">
+                            @foreach (var department in Model.DepartmentOptions)
+                            {
+                                <option value="@department.DepartmentId">@department.DepartmentName</option>
+
+                            }
+                        </select>
+
+
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label">Position</label>
+                        <select class="form-select" name="PositionId">
+                            @foreach (var position in Model.PositionOptions)
+                            {
+                                <option value="@position.PositionId">@position.PositionTitle</option>
+
+                            }
+                        </select>
+
+
+                    </div>
+                    <!--<div>
+                    <label>Position</label> <input type="number" name="PositionId" />
+                </div>-->
+                    <div>
+                        <input type="submit" value="Add Employee" class="btn btn-success" />
+
+                    </div>
+                </form>
+            </div>
+
+        </div>
     </div>
-    <div>
-        <label>Last Name: </label> <input type="text" name="LastName" />
-    </div>
-    <div>
-        <label>Hire Date</label> <input type="date" name="HireDate" />
-    </div>
-    <div>
-        <label>Department</label>
-        <select name="DepartmentId">
-            @foreach (var department in Model.DepartmentOptions)
-            {
-                <option value="@department.DepartmentId">@department.DepartmentName</option>
 
-            }
-        </select>
-
-
-    </div>
-
-    <div>
-        <label>Position</label>
-        <select name="PositionId">
-            @foreach (var position in Model.PositionOptions)
-            {
-                <option value="@position.PositionId">@position.PositionTitle</option>
-
-            }
-        </select>
-
-
-    </div>
-    <!--<div>
-        <label>Position</label> <input type="number" name="PositionId" />
-    </div>-->
-    <div>
-        <input type="submit" value="Add Employee" style="background-color:darkgreen; color:white"/>
-
-    </div>
-</form>
-
+</div>
