--- a/PassionProjectSummer2024/Views/Employee/Details.cshtml
+++ b/PassionProjectSummer2024/Views/Employee/Details.cshtml
@@ -2,34 +2,19 @@
 @{
     ViewBag.Title = "Details";
 }
-<style>
 
-    .button {
-        display: inline-block;
-        padding: 8px 18px;
-        font-size: 16px;
-        color: white;
-        background-color: blue;
-        text-align: center;
-        text-decoration: none;
-        border-radius: 5px;
-    }
-
-        .button:hover {
-            background-color: darkblue;
-            color: white;
-        }
-</style>
-<h2>Employee Details</h2>
+<h2 class="text-center display-4">Employee Details</h2>
 <br />
-<a href="/Employee/List">Go back to List</a><br /><br />
-<a href="/Employee/DeleteConfirm/@Model.EmployeeId" class="button">Delete Employee</a>
-<a href="/Employee/Edit/@Model.EmployeeId" class="button" style="margin-left:10px;margin-bottom:5px">Update Employee</a><br />
-<div>
-    <p><strong>First Name : </strong>@Model.FirstName </p>
-    <p><strong>Last Name : </strong>@Model.LastName </p>
-    <p><strong>Employee Id : </strong>@Model.EmployeeId </p>
-    <p><strong>Hire Date : </strong>@Model.HireDate </p>
-    <p><strong>Department Name : </strong>@Model.DepartmentName </p>
-    <p><strong>Position Title : </strong>@Model.PositionTitle </p>
+<a class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 mb-4" href="/Employee/List">Go back to List</a><br/>
+<a class="btn btn-primary" href="/Employee/DeleteConfirm/@Model.EmployeeId" class="button">Delete Employee</a>
+<a  class="btn btn-primary" href="/Employee/Edit/@Model.EmployeeId" class="button" style="margin-left:10px;margin-bottom:5px">Update Employee</a><br />
+<div class="container text-center mt-5">
+<div class="p-5  d-inline-block text-start text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
+    <p class="mb-2 fs-4"><strong>First Name : </strong>@Model.FirstName </p>
+    <p class="mb-2 fs-4"><strong>Last Name : </strong>@Model.LastName </p>
+    <p class="mb-2 fs-4"><strong>Employee Id : </strong>@Model.EmployeeId </p>
+    <p class="mb-2 fs-4"><strong>Hire Date : </strong>@Model.HireDate </p>
+    <p class="mb-2 fs-4"><strong>Department Name : </strong>@Model.DepartmentName </p>
+    <p class="mb-2 fs-4"><strong>Position Title : </strong>@Model.PositionTitle </p>
+</div>
 </div>
