--- a/PassionProjectSummer2024/Views/Department/Edit.cshtml
+++ b/PassionProjectSummer2024/Views/Department/Edit.cshtml
@@ -3,63 +3,78 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Update Department Information</h2>
+<h2 class="text-center display-4">Update Department Information</h2>
 <br />
-<form action="/Department/Update/@Model.SelectedDepartment.DepartmentId" method="POST">
-    <div>
-        <label>Department Name : </label> <input type="text" name="DepartmentName" value="@Model.SelectedDepartment.DepartmentName" />
-    </div>
-    <div>
-        <label>Department Manager : </label> <input type="text" name="DepartmentManager" value="@Model.SelectedDepartment.DepartmentManager" />
-    </div>
-    <div>
-        <label>No of Employees</label> <input type="number" name="NoOfEmployees" value="@Model.SelectedDepartment.NoOfEmployees" />
-    </div>
-    <div style="display:none;">
-        <label>Department Id</label> <input type="number" name="DepartmentId" value="@Model.SelectedDepartment.DepartmentId" />
-    </div>
-    
-    <div>
-        <input type="submit" value="Update Department" style="background-color:orangered; color:white" />
+<div class="container-fluid mt-3">
+    <div class="container ">
+        <div class="row justify-content-between gap-5">
+            <div class="col">
+                <form action="/Department/Update/@Model.SelectedDepartment.DepartmentId" method="POST">
+                    <div class="mb-3">
+                        <label class="form-label">Department Name : </label> <input type="text" class="form-control" name="DepartmentName" value="@Model.SelectedDepartment.DepartmentName" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Department Manager : </label> <input type="text" class="form-control" name="DepartmentManager" value="@Model.SelectedDepartment.DepartmentManager" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">No of Employees</label> <input type="number" class="form-control" name="NoOfEmployees" value="@Model.SelectedDepartment.NoOfEmployees" />
+                    </div>
+                    <div style="display:none;">
+                        <label>Department Id</label> <input type="number" name="DepartmentId" class="form-control" value="@Model.SelectedDepartment.DepartmentId" />
+                    </div>
 
-    </div>
+                    <div class="mb-3">
+                        <input type="submit" value="Update Department" class="btn btn-warning" />
+
+                    </div>
 
 
-</form>
-<div>
-    <h3>List of Employees in this Department</h3>
-    @foreach (var employee in Model.RelatedEmployees)
-    {
-        if (employee.PreviousDepartmentId == 0 || employee.PreviousDepartmentId== employee.DepartmentId)
-        {
-            <div style="color:dimgrey">@employee.FirstName @employee.LastName <span style="color:black"> - Cannot Cancel </span></div>
-           
-        }
-        else { 
-        <a href="/Employee/Details/@employee.EmployeeId">@employee.FirstName @employee.LastName</a> <a href="/Department/UnAssociate/@Model.SelectedDepartment.DepartmentId?EmployeeId=@employee.EmployeeId"  style="color:red">Cancel</a>
-        <br />}
+                </form>
 
-    }
-    <br/>
-    <div style="color:red ; Background: lightyellow ; padding:4px">NOTE : Employees who has @Model.SelectedDepartment.DepartmentName as thier first Department, they cannot be unassociated from this department throught this page , Please visit  update Employee Page to change their Department</div>
 
-</div>
-<br/>
-<div>
-    <h3>Add employees to this Department- @Model.SelectedDepartment.DepartmentName</h3>
-    <form method="post" action="/Department/Associate/@Model.SelectedDepartment.DepartmentId">
-        <select name="EmployeeId">
-            @foreach (var employee in Model.UnrelatedEmployees)
-            {
-                <option value="@employee.EmployeeId">
-                    @employee.FirstName @employee.LastName </option>
+            </div>
+
+
+            <div class="col">
+                <div>
+                    <h3 class="fw-semibold">List of Employees in this Department</h3>
+                    @foreach (var employee in Model.RelatedEmployees)
+                    {
+                        if (employee.PreviousDepartmentId == 0 || employee.PreviousDepartmentId == employee.DepartmentId)
+                        {
+                            <div style="color:dimgrey">@employee.FirstName @employee.LastName <span style="color:black"> - Cannot Cancel </span></div>
+
+                        }
+                        else
+                        {
+                            <a href="/Employee/Details/@employee.EmployeeId">@employee.FirstName @employee.LastName</a> <a href="/Department/UnAssociate/@Model.SelectedDepartment.DepartmentId?EmployeeId=@employee.EmployeeId" style="color:red">Cancel</a>
+                            <br />}
+
+                    }
+                    <br />
+                    <div style="color:red ; Background: lightyellow ; padding:4px">NOTE : Employees who has @Model.SelectedDepartment.DepartmentName as thier first Department, they cannot be unassociated from this department throught this page , Please visit  update Employee Page to change their Department</div>
+
+                </div>
                 <br />
+                <div>
+                    <h3 class="fw-semibold">Add employees to this Department- @Model.SelectedDepartment.DepartmentName</h3>
+                    <form method="post" action="/Department/Associate/@Model.SelectedDepartment.DepartmentId">
+                        <select  name="EmployeeId">
+                            @foreach (var employee in Model.UnrelatedEmployees)
+                            {
+                                <option value="@employee.EmployeeId">
+                                    @employee.FirstName @employee.LastName
+                                </option>
+                                <br />
 
-            }
-        </select>
-        <input type="submit" value="Add Employee" style="background-color:orangered; color:white"/>
-    </form>
+                            }
+                        </select>
+                        <input type="submit" value="Add Employee"  class="btn btn-success ms-3" style="background-color:orangered; color:white" />
+                    </form>
 
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
 
