--- a/PassionProjectSummer2024/Views/Department/Error.cshtml
+++ b/PassionProjectSummer2024/Views/Department/Error.cshtml
@@ -3,5 +3,5 @@
     ViewBag.Title = "Error";
 }
 
-<h2>Something Went wrong</h2>
+<h2 class="p-3 text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">Something Went wrong</h2>
 
