--- a/PassionProjectSummer2024/Views/Employee/New.cshtml
+++ b/PassionProjectSummer2024/Views/Employee/New.cshtml
@@ -6,9 +6,9 @@
 <h2 class="text-center display-4">Add New Employee</h2>
 <a class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 mb-4" href="/Employee/List">Go back to List</a>
 <div class="container-fluid">
-    <div class="container">
+    <div class="container ">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mx-auto">
 
                 <form action="/Employee/Create" method="POST">
                     <div class="mb-3">
