--- a/PassionProjectSummer2024/Views/Department/DeleteConfirm.cshtml
+++ b/PassionProjectSummer2024/Views/Department/DeleteConfirm.cshtml
@@ -3,13 +3,13 @@
     ViewBag.Title = "DeleteConfirm";
 }
 
-<h2>Are you sure you want to delete this Department?</h2>
-<a href="/Department/List">Cancel</a>
-<h2>@Model.DepartmentName :Id - @Model.DepartmentId</h2>
-<div>Department Manager: @Model.DepartmentManager </div>
+<h2  class="text-center display-4">Are you sure you want to delete this Department?</h2>
+<a class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 mb-4" href="/Department/List">Cancel</a>
+<h2 class="text-center text-danger-emphasis display-6">@Model.DepartmentName :Id - @Model.DepartmentId</h2>
+<div class=" text-center fs-6">Department Manager: @Model.DepartmentManager </div>
 
-<form action="/Department/Delete/@Model.DepartmentId" method="POST">
-    <input type="submit" value="Confirm Delete" style="background-color:orangered; color:white" />
+<form class="text-center mt-5" action="/Department/Delete/@Model.DepartmentId" method="POST">
+    <input type="submit" class="btn btn-danger text-center" value="Confirm Delete" />
 
 </form>
 
