--- a/PassionProjectSummer2024/Views/Home/Index.cshtml
+++ b/PassionProjectSummer2024/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <main>
-    <section class="row" aria-labelledby="aspnetTitle">
+    <!--<section class="row" aria-labelledby="aspnetTitle">
         <h1 id="title">ASP.NET</h1>
         <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
         <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
@@ -29,5 +29,29 @@
             <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
             <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
         </section>
+    </div>-->
+    
+    
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/Content/Images/passion.jpg" class="d-block w-100 vh-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/Content/Images/diversity.jpg" class="d-block w-100 vh-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/Content/Images/unity.jpg" class="d-block w-100 vh-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
+
 </main>
