--- a/PassionProjectSummer2024/Views/Shared/_Layout.cshtml
+++ b/PassionProjectSummer2024/Views/Shared/_Layout.cshtml
@@ -12,6 +12,9 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
+            
+                <img src="~/Content/Images/logo.png" height="40" width="40" class="me-3" alt="">
+            
             @Html.ActionLink("Amazon Workplace", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -21,13 +24,13 @@
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <!-- <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>-->
+            <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>-->
 
                     <li>@Html.ActionLink("Employee", "List", "Employee", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Department", "List", "Department", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Position", "List", "Position", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
-                 @Html.Partial("_LoginPartial")
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </nav>
