changes  in style

--- a/PassionProjectSummer2024/Views/Home/Index.cshtml
+++ b/PassionProjectSummer2024/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="~/Content/Images/passion.jpg" class="d-block w-100 vh-100" alt="...">
+                <img src="~/Content/Images/succes.jpeg" class="d-block w-100 vh-100" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="~/Content/Images/diversity.jpg" class="d-block w-100 vh-100" alt="...">
@@ -45,11 +45,11 @@
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon bg-warning" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon bg-warning" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
